add exclamation mark

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to version 3 of my website</h1>
-<div>Version 3.0</div>
+<div>Version 3.0 !</div>
 <div>Release party coming soon</div>
 <div>special number is: <span th:text="${specialNumber}">number</span></div>
 </body>
