--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,10 +5,10 @@
     <title>home notaparty</title>
 </head>
 <body>
-<h1>Welcome to version 3 of my website</h1>
-<div>Version 3.0 !</div>
-<div>Release party coming soon</div>
-<div>special number is: <span th:text="${specialNumber}">number</span></div>
+<h1>Welcome to the latest version of my website</h1>
+<div>Version 4.0 !</div>
+<div>Release party coming very soon</div>
+<div>The special number is: <span th:text="${specialNumber}">number</span></div>
 </body>
 </html>
 
